@@ -26,7 +26,7 @@ function smarty_modifiercompiler_strip($params, $compiler)
     if (!isset($params[1])) {
         $params[1] = "' '";
     } 
-    return 'preg_replace(\'!\s+!\',' . $params[1] . ',' . $params[0] . ')';
+    return "preg_replace('!\s+!', {$params[1]},{$params[0]})";
 } 
 
 ?>
